--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react-window": "^1.8.6",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "socket.io-client": "^4.0.1",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
